# dipexercises

./: README.md  pyproject.toml
src/: exercise1.ipynb  project.ipynb
tests/: test_dipexercises.py
